2002-11-29  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 2.9.0pre1. 
	  Tag name: "foomatic-filters-2_9_0pre1".
	
2002-11-28  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed comment text.

	* filter.conf: Updated comment text.

	* USAGE: Fixed typo.
	
2002-11-27  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in, configure.in, makeMan.in: Updated Makefile
	  infrastructure to let the package correctly build the man page
	  and link foomatic-rip into the filter directories of CUPS and
	  PPR.

	* foomatic-rip.in: Allow more than one occurence of the same spot
	  ("%A", "%B", ...) in the RIP command line prototype, so that one
	  option setting can act on several points of the command line
	  (was an old TODO point of Grant).
	
	* foomatic-rip.1.in: Continued working on the man page for
	  foomatic-rip.

	* foomatic-gswrapper.in: Fall back to "| cat >&3" and "-" instead
	  of "/dev/fd/3" and "/dev/fd/0", if the file descriptor directory
	  /dev/fd does not exist.

	* README, USAGE, TODO: Updated the package documentation.
	
2002-11-26  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Added instructions for using a custom page size
	  to the documentation page output ("-o docs") for the PPR RIP
	  mode of foomatic-rip.

	* src/*.in, src/Makefile, lpdomatic.8.in, directomatic.1.in:
	  Removed the old spooler-specific filters, they are replaced
	  by foomatic-rip now.

	* Makefile.in, configure.in: Removed stuff to build the old
	  src/*omatic filter.

	* foomatic-rip.1.in: Added man page for foomatic-rip.

2002-11-25  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Various fixes and adaptations to make
	  foomatic-rip well working together with the new
	  foomatic-configure:

	  Support for raw queues under all spoolers and spooler-less
	  printing.
	
	  When foomatic-rip is used as a PPR RIP, it accepts also options